Implementada camada de infaestrutura: Infra.Data, CrossCutting.Bus, CrossCuttting.Identity, CrossCutting.Ioc

--- a/src/Infra.CrossCutting.Bus/Infra.CrossCutting.Bus.csproj
+++ b/src/Infra.CrossCutting.Bus/Infra.CrossCutting.Bus.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NetDevPack" Version="1.0.4" />
+    <PackageReference Include="MediatR" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Domain.Core\Domain.Core.csproj" />
   </ItemGroup>
 
 </Project>
