--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain.Core\Domain.Core.csproj" />
+    <ProjectReference Include="..\Infra.CrossCutting.Bus\Infra.CrossCutting.Bus.csproj" />
   </ItemGroup>
 
 </Project>
